// Copyright 2024 Google LLC.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package privacy_sandbox.tvs;

import "google/protobuf/empty.proto";

message CreateSessionRequest {
  bytes binary_message = 1;
}

message CreateSessionResponse {
  bytes session_id = 1;
  bytes binary_message = 2;
}

message DoCommandRequest {
  bytes session_id = 1;
  bytes binary_message = 2;
}

message DoCommandResponse {
  bytes binary_message = 1;
}

message TerminateSessionRequest {
  bytes session_id = 1;
}

service TvsEnclave {
  // method_id: 1
  rpc CreateSession(CreateSessionRequest) returns (CreateSessionResponse);
  // method_id: 2
  rpc DoCommand(DoCommandRequest) returns (DoCommandResponse);
  // method_id: 3
  rpc TerminateSession(TerminateSessionRequest)
      returns (.google.protobuf.Empty);
}
